Implement audit logging and improve connection pooling
Major refactoring of controllers and models to implement proper MVC pattern for audit logging:

- Rewrote ControladorAuditLog with KeyListener, SwingWorker, and auto-refresh timer
- Added AuditLog.registrar() calls to Inventario, Mantenimiento, Préstamo, Reserva, and Usuario controllers
- Added 30s auto-refresh timers to all data-loading controllers
- Refactored AuditLog model with clearer field names and database transaction handling
- Improved connection handling across all model classes using try-finally blocks
- Removed demo data from Usuario and VistaAuditoria
- Implemented transaction support in Préstamo for loan detail insertion
- Added actual database implementations to Repuesto (replaced stubs)
- Updated Dashboard to properly initialize AuditLog MVC components
- Improved data persistence with is_deleted soft delete patterns