@@ -10,101 +10,101 @@ import java.util.List;
 
 public class AuditLog {
     
-    private int idAuditLog;
-    private String nombreAuditLog;      // user_id (document)
-    private String documentoAuditLog;   // action
-    private String direccionAuditLog;   // entity / entity_name
-    private String celularAuditLog;     // created_at (fecha)
+    private int id;
+    private String usuario;
+    private String accion;
+    private String modulo;
+    private String detalle;
+    private String fecha;
     
     public AuditLog() {}
 
-    public int getIdAuditLog() { return idAuditLog; }
-    public void setIdAuditLog(int idAuditLog) { this.idAuditLog = idAuditLog; }
+    public int getId() { return id; }
+    public void setId(int id) { this.id = id; }
 
-    public String getNombreAuditLog() { return nombreAuditLog; }
-    public void setNombreAuditLog(String nombreAuditLog) { this.nombreAuditLog = nombreAuditLog; }
+    public String getUsuario() { return usuario; }
+    public void setUsuario(String usuario) { this.usuario = usuario; }
 
-    public String getDocumentoAuditLog() { return documentoAuditLog; }
-    public void setDocumentoAuditLog(String documentoAuditLog) { this.documentoAuditLog = documentoAuditLog; }
+    public String getAccion() { return accion; }
+    public void setAccion(String accion) { this.accion = accion; }
 
-    public String getDireccionAuditLog() { return direccionAuditLog; }
-    public void setDireccionAuditLog(String direccionAuditLog) { this.direccionAuditLog = direccionAuditLog; }
+    public String getModulo() { return modulo; }
+    public void setModulo(String modulo) { this.modulo = modulo; }
 
-    public String getCelularAuditLog() { return celularAuditLog; }
-    public void setCelularAuditLog(String celularAuditLog) { this.celularAuditLog = celularAuditLog; }
+    public String getDetalle() { return detalle; }
+    public void setDetalle(String detalle) { this.detalle = detalle; }
 
-    public void insertar() {
-        System.out.println("Módulo de auditoría de solo lectura.");
-    }
-    
-    public void modificar() {
-        System.out.println("Módulo de auditoría de solo lectura.");
-    }
-    
-    public void eliminar() {
-        System.out.println("Módulo de auditoría de solo lectura.");
-    }
-    
-    /**
-     * Lista todos los registros de auditoría desde la tabla remota audit_logs.
-     * El mapeo de campos es:
-     *   nombreAuditLog   -> user_id
-     *   documentoAuditLog -> action
-     *   direccionAuditLog -> entity_name (o entity si entity_name es nulo)
-     *   celularAuditLog   -> created_at (fecha formateada)
-     */
-    public Iterator<AuditLog> listar() {
-        List<AuditLog> lista = new ArrayList<>();
-        String sql = "SELECT id, user_id, action, entity, entity_name, created_at " +
-                     "FROM audit_logs ORDER BY created_at DESC";
-        try (Connection con = ConexionBD.getInstance().getConnection();
-             PreparedStatement ps = con.prepareStatement(sql);
-             ResultSet rs = ps.executeQuery()) {
-            while (rs.next()) {
-                AuditLog log = new AuditLog();
-                log.setIdAuditLog(rs.getInt("id"));
-                log.setNombreAuditLog(rs.getString("user_id"));
-                log.setDocumentoAuditLog(rs.getString("action"));
-                String entidad = rs.getString("entity_name");
-                if (entidad == null || entidad.isBlank()) entidad = rs.getString("entity");
-                log.setDireccionAuditLog(entidad != null ? entidad : "—");
-                java.sql.Timestamp ts = rs.getTimestamp("created_at");
-                log.setCelularAuditLog(ts != null ? ts.toLocalDateTime().toLocalDate().toString() : "");
-                lista.add(log);
+    public String getFecha() { return fecha; }
+    public void setFecha(String fecha) { this.fecha = fecha; }
+
+    public static void registrar(String usuario, String accion, String modulo, String detalle) {
+        Connection con = null;
+        try {
+            con = ConexionBD.getInstance().getConnection();
+            String sql = "INSERT INTO audit_logs (user_id, action, entity, entity_name) VALUES (?, ?, ?, ?)";
+            try (PreparedStatement ps = con.prepareStatement(sql)) {
+                ps.setString(1, usuario);
+                ps.setString(2, accion);
+                ps.setString(3, modulo);
+                ps.setString(4, detalle);
+                ps.executeUpdate();
             }
         } catch (SQLException e) {
-            System.err.println("Error al listar audit_logs: " + e.getMessage());
+            System.err.println("Error al insertar audit_log: " + e.getMessage());
+        } finally {
+            if (con != null) ConexionBD.getInstance().releaseConnection(con);
         }
-        return lista.iterator();
+    }
+    
+    public Iterator<AuditLog> listar() {
+        return listarConFiltro("").iterator();
     }
     
     public Iterator<AuditLog> buscar(String busqueda) {
+        return listarConFiltro(busqueda).iterator();
+    }
+    
+    private List<AuditLog> listarConFiltro(String filtro) {
         List<AuditLog> lista = new ArrayList<>();
-        String sql = "SELECT id, user_id, action, entity, entity_name, created_at " +
-                     "FROM audit_logs WHERE user_id ILIKE ? OR action ILIKE ? OR entity_name ILIKE ? " +
-                     "ORDER BY created_at DESC";
-        try (Connection con = ConexionBD.getInstance().getConnection();
-             PreparedStatement ps = con.prepareStatement(sql)) {
-            String patron = "%" + busqueda + "%";
-            ps.setString(1, patron);
-            ps.setString(2, patron);
-            ps.setString(3, patron);
-            ResultSet rs = ps.executeQuery();
-            while (rs.next()) {
-                AuditLog log = new AuditLog();
-                log.setIdAuditLog(rs.getInt("id"));
-                log.setNombreAuditLog(rs.getString("user_id"));
-                log.setDocumentoAuditLog(rs.getString("action"));
-                String entidad = rs.getString("entity_name");
-                if (entidad == null || entidad.isBlank()) entidad = rs.getString("entity");
-                log.setDireccionAuditLog(entidad != null ? entidad : "—");
-                java.sql.Timestamp ts = rs.getTimestamp("created_at");
-                log.setCelularAuditLog(ts != null ? ts.toLocalDateTime().toLocalDate().toString() : "");
-                lista.add(log);
+        StringBuilder sql = new StringBuilder(
+            "SELECT id, user_id, action, entity, entity_name, created_at FROM audit_logs");
+        if (filtro != null && !filtro.trim().isEmpty()) {
+            sql.append(" WHERE user_id ILIKE ? OR action ILIKE ? OR entity ILIKE ? OR entity_name ILIKE ?");
+        }
+        sql.append(" ORDER BY created_at DESC LIMIT 200");
+        Connection con = null;
+        try {
+            con = ConexionBD.getInstance().getConnection();
+            try (PreparedStatement ps = con.prepareStatement(sql.toString())) {
+                if (filtro != null && !filtro.trim().isEmpty()) {
+                    String patron = "%" + filtro.trim() + "%";
+                    ps.setString(1, patron);
+                    ps.setString(2, patron);
+                    ps.setString(3, patron);
+                    ps.setString(4, patron);
+                }
+                try (ResultSet rs = ps.executeQuery()) {
+                    while (rs.next()) {
+                        AuditLog log = new AuditLog();
+                        log.setId(rs.getInt("id"));
+                        log.setUsuario(rs.getString("user_id"));
+                        log.setAccion(rs.getString("action"));
+                        String mod = rs.getString("entity");
+                        log.setModulo(mod != null ? mod : "\u2014");
+                        String det = rs.getString("entity_name");
+                        log.setDetalle(det != null ? det : "");
+                        java.sql.Timestamp ts = rs.getTimestamp("created_at");
+                        log.setFecha(ts != null ? ts.toLocalDateTime().format(
+                            java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm")) : "");
+                        lista.add(log);
+                    }
+                }
             }
         } catch (SQLException e) {
-            System.err.println("Error al buscar audit_logs: " + e.getMessage());
+            System.err.println("Error al listar audit_logs: " + e.getMessage());
+        } finally {
+            if (con != null) ConexionBD.getInstance().releaseConnection(con);
         }
-        return lista.iterator();
+        return lista;
     }
 }
